ChangeLog
===========
This file contains a cronological history of changes/improvements and more
that have happened to the libwcl library

===========

2006-06-05
o Add 1394 Camera support
o Restructure the wcl.lib compilation to make automake happy. It doesn't like
  libraries not starting with lib and ending in a. 

2006-05-31
o Modify the networking library to handle exceptions correctly. The
  SocketException class now takes in the socket only and records
  the last error used. This made a modification to all the read/write
  methods so they all throw an exception
+ Add * operator to socket class to allow obtaining the file descriptor 

2006-05-29
o Modified networking library to compile under MSVC
+ Add libtool builder for future use
o Update project to successfully build MSVC dll/lib pair.
  This change includes lots of changes to configure, makefile, etc
o Disable RANLIB if using MSVC as it corrupts the binary

2006-05-24
+ Added a number of macros (cfg/msvc.cfg) to support compiling under MSVC enabled with --enable-msvc
+ Added wrapmsvc.exe / .cpp to cfg/ these are used to support MSVC binaries
+ Fix an issue with automake and there not being a src/Makefile.am
o modify the WCL_AC_MSVC_SETUP macro to correctly check the link.exe 
  not sure if it works but it gets us closer to building

2006-05-16 benjsc
+ Added cfg directory for storing m4 macros
+ Use AM_CONFIG_HEADER in configure.ac so that it builds with automake 16
+ Added the REPO file, indicating Repository changes
o Moved src/* to src/wcl/*
o Use the makefile at the base level for subdirectories (avoids recursive make issue)
o make the command: make install install headers in the correct location
o Modify all network headers to correctly use #include <wcl/...>  